[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/PauseMenu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.0
margin_top = 108.0
margin_right = 125.5
margin_bottom = 176.0

[node name="ContinuButton" type="Button" parent="VBoxContainer"]
margin_right = 264.0
margin_bottom = 20.0
text = "CONTINUER"

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 264.0
margin_bottom = 44.0
text = "RECOMMENCER"

[node name="BackToMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 264.0
margin_bottom = 68.0
text = "RETOUR AU MENU"

[node name="PauseIcon" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ColorRect" type="ColorRect" parent="PauseIcon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = -240.0
margin_right = -24.0
margin_bottom = -112.0
color = Color( 0.921569, 0.921569, 0.921569, 1 )

[node name="ColorRect2" type="ColorRect" parent="PauseIcon"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 15.0
margin_top = -239.0
margin_right = 48.0
margin_bottom = -111.0
color = Color( 0.917647, 0.917647, 0.917647, 1 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.117647 )
show_behind_parent = true
light_mask = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
input_pass_on_modal_close_click = false

[connection signal="pressed" from="VBoxContainer/ContinuButton" to="." method="_on_ContinuButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
